# wensi-ai-app

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
docs/deployment/: 20260314-macos-code-signing.md
scripts/: README.md  build-history.json  build.sh
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  llm.rs  main.rs
src/platform-experts/: csdn.ts  index.ts  jianshu.ts  markdown.ts  types.ts  wechat.ts  xiaohongshu.ts  zhihu.ts
src/services/: tauriApi.ts
src/utils/: coverCrop.ts  markdown.ts
